Add Game and Crud respository structure
