# PickEmLeagueFrontEnd/ClientApp/src/Apis/apis/WeatherForecastApi.ts
@@ -1,76 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * PickEmLeague
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 1.0
- *
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import * as runtime from "../runtime";
-import {
-  WeatherForecast,
-  WeatherForecastFromJSON,
-  WeatherForecastToJSON,
-} from "../models";
-
-/**
- *
- */
-export class WeatherForecastApi extends runtime.BaseAPI {
-  /**
-   */
-  async weatherForecastGetRaw(): Promise<
-    runtime.ApiResponse<Array<WeatherForecast>>
-  > {
-    const queryParameters: runtime.HTTPQuery = {};
-
-    const headerParameters: runtime.HTTPHeaders = {};
-
-    const response = await this.request({
-      path: `/WeatherForecast`,
-      method: "GET",
-      headers: headerParameters,
-      query: queryParameters,
-    });
-
-    return new runtime.JSONApiResponse(response, (jsonValue) =>
-      jsonValue.map(WeatherForecastFromJSON)
-    );
-  }
-
-  /**
-   */
-  async weatherForecastGet(): Promise<Array<WeatherForecast>> {
-    const response = await this.weatherForecastGetRaw();
-    return await response.value();
-  }
-
-  /**
-   */
-  async weatherForecastPostRaw(): Promise<runtime.ApiResponse<void>> {
-    const queryParameters: runtime.HTTPQuery = {};
-
-    const headerParameters: runtime.HTTPHeaders = {};
-
-    const response = await this.request({
-      path: `/WeatherForecast`,
-      method: "POST",
-      headers: headerParameters,
-      query: queryParameters,
-    });
-
-    return new runtime.VoidApiResponse(response);
-  }
-
-  /**
-   */
-  async weatherForecastPost(): Promise<void> {
-    await this.weatherForecastPostRaw();
-  }
-}
